[tool.poetry]
name = "ExamMaker"
version = "0.1.0"
description = ""
authors = ["Andrew Stocker <sleepyams@gmail.com>"]
homepage = "https://github.com/amstocker/ExamMaker"
repository = "https://github.com/amstocker/ExamMaker"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
